--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 		
 			<h1>首页</h1>
 		
-		<p>
-欢迎来到我的博客</p>
+		
+<div class="figure">
+<p><img src="/assets/dogspacemacs.png" alt="/assets/dogspacemacs.png" />
+</p>
+</div>
 
 	</div>
 	<div class="col-md-1" id="maybe-toc"></div>
