--- a/about/index.html
+++ b/about/index.html
@@ -443,14 +443,14 @@
 
 
 <h2>1.成都-陈一发儿</h2>
-<audio controls autoplay loop  preload="none" src="/music/chengdu.mp3">
+<audio controls src="/music/chengdu.mp3">
     <p>Your browser does not support the <code>audio</code> element.</p>
 </audio>
 
 
 
 <h2>2.童话镇-陈一发儿</h2>
-<audio controls autoplay loop  preload="none" src="/music/tonghauzhen.mp3">
+<audio controls src="/music/tonghauzhen.mp3">
     <p>Your browser does not support the <code>audio</code> element.</p>
 </audio>
 
